@@ -11,6 +11,8 @@ TODO
 =====
 - Added translation for warning and error messages.
 - Added translation of options in dropdown fields.
+- Fixed "readonly" mode for select fields. Select fields need a disabled
+  attribute instead of a readonly attribute.
 
 0.8.2
 =====
